--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -257,6 +257,9 @@
             </div>
         </div>
         <script type="application/javascript">
+            var mensajeNoEnvio = "#{alumno['send.message.not.send']}";
+            var mensajeEnviado = "#{alumno['send.message']}";
+
             function getRespuestas() {
                 var oracionesDesordenadas = document.querySelectorAll('.oraciones');
                 var respuestas = [];
