login modal boton estilo

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
@@ -137,5 +137,8 @@
         </script>
         <h:outputScript library="js" name="/alumno/activity-free-library.js"/>
     </ui:define>
+    <ui:define name="enlaces-js">
+        <h:outputScript library="js" name="/alumno/drag-prueba.js"/>
+    </ui:define>
 </ui:composition>
 </html>
