--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -272,7 +272,7 @@
             }
         </script>
         <h:outputScript library="js" name="alumno/more-actibity.js"/>
-        <h:outputScript library="js" name="/alumno/drag-drop.js"/>
+        <h:outputScript library="js" name="/alumno/drag-dos.js"/>
     </ui:define>
 </ui:composition>
 </html>
