Muestra el video de forma correcta

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -247,7 +247,7 @@
             var ordenarPalabras = document.querySelector('.order-words');
             var mensajeEnviado = "#{alumno['send.message']}";
             var mensajeError = "#{alumno['send.message.error']}";
-            var mensajeTrnascripcion = "#{alumno['send.message.transcript']}":
+            var mensajeTrnascripcion = "#{alumno['send.message.transcript']}";
 
             function onYouTubeIframeAPIReady() {
                 videoPlayer.forEach(function (video) {
