--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -40,8 +40,8 @@
     </ui:define>
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
-            <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img" rendered="#{true}"/>
-            <h:graphicImage library="img" name="avatar/astronauta-nina.svg" alt="" class="uk-border-circle profile-img" rendered="#{false}"/>
+            <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="profile-img" rendered="#{true}"/>
+            <h:graphicImage library="img" name="avatar/astronauta-nina.svg" alt="" class="profile-img" rendered="#{false}"/>
             <h6 class="uk-text-center uk-margin-remove-vertical text-light nombre-usuario">#{alumnoControlador.alumnoModelo.apodo}</h6>
             <div class="uk-position-relative uk-text-center uk-display-block">
                 <!--Modificar los datos para mostrar en el Alumno-->
