--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -70,8 +70,8 @@
                 <li uk-tooltip="title: #{alumno['for.all.views.library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg" width="80" alt="" /></h:link></li>
             </ul>
         </div>
-        <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
-            <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
+        <div class="left-nav-wrap uk-hidden@xl ">
+            <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-small-top">
                 <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="60" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right"><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="60" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.glossary']}; pos: right"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg" width="60" alt="" /></h:link></li>
