--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -73,12 +73,12 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="navegacion.css"/>
         <h:outputStylesheet library="css" name="biblioteca.css"/>
-        <script src="https://www.youtube.com/iframe_api"></script>
+<!--        <script src="https://www.youtube.com/iframe_api"></script>-->
 
         <div class="uk-container padding-inferior">
             <div data-uk-filter="target: .js-filter">
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
-                    <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActvidadModelo">
+                    <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActvidadModelo" varStatus="conta">
                         <h:panelGroup layout="block" styleClass="uk-width-1-3@m " pt:data-tags="a beautiful landscape - nature outdoor">
                             <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ">
                                 <div class="uk-card-header border-card">
@@ -93,27 +93,53 @@
                                             </span>
                                            <ui:remove>#{tareaActvidadModelo.idActividad}</ui:remove>
                                         </div>
-                                        <div class="uk-width-auto uk-text-right uk-text-muted">
-                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>
-                                            <span class="uk-padding-small">#{tareaActvidadModelo.reproducciones}</span>
-                                        </div>
+                                        <ui:remove>
+                                            <div class="uk-width-auto uk-text-right uk-text-muted">
+                                                <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>
+                                                <span class="uk-padding-small">#{tareaActvidadModelo.reproducciones}</span>
+                                            </div>
+                                        </ui:remove>
                                     </h:panelGroup>
                                 </div>
-                                <div class="uk-card-media-top">
+                                <div class="uk-card-media-top" data-video="#{tareaActvidadModelo.idActividad}">
                                     <h:panelGroup layout="block" pt:uk-spinner=""/>
-                                    <div id="#{tareaActvidadModelo.idActividad}" class="videoPlayer"></div>
+                                    <ui:remove><div id="#{tareaActvidadModelo.idActividad}" class="videoPlayer"></div>
+                                        <iframe id="#{tareaActvidadModelo.idActividad}" type="text/html" width="100%" height="100%"
+                                                src="http://www.youtube.com/embed/#{tareaActvidadModelo.idActividad}?enablejsapi=1"
+                                                frameborder="0"></iframe>
+                                    </ui:remove>
+                                    <ui:fragment rendered="#{(conta.index) le 6 }">
+                                        <img src="https://i.ytimg.com/vi/#{tareaActvidadModelo.idActividad}/mqdefault.jpg"/>
+                                    </ui:fragment>
+                                    <ui:fragment rendered="#{(conta.index) gt 6 }">
+                                        <img data-video="https://i.ytimg.com/vi/#{tareaActvidadModelo.idActividad}/mqdefault.jpg"/>
+                                    </ui:fragment>
+
                                 </div>
                                 <div style="" class="uk-card-body">
-                                    <div class="uk-text-center mensaje1"><span class="mensaje1-1">#{alumno['activities.title.description.please.watch.the']}<br/>#{alumno['title.description.full.video']}</span></div>
+                                    <ui:remove><div class="uk-text-center mensaje1"><span class="mensaje1-1">#{alumno['activities.title.description.please.watch.the']}<br/>#{alumno['title.description.full.video']}</span></div></ui:remove>
+                                    <div class="caja-pregunta-detonadora">
+                                        <h:form>
+                                            <h:commandLink  action="#{tareaGramaticaControlador.incrementaReporduccion(1, tareaActvidadModelo.id)}" >
+                                                <f:actionListener binding="#{actividadAlumno2Controlador.buscaPregunta(tareaActvidadModelo.idActividad)}"/>
+                                                <f:ajax render="pregunta-detonadora"/>
+                                            </h:commandLink>
+                                        </h:form>
+                                        <span>
+                                            <h:outputText id="pregunta-detonadora" value="#{actividadAlumno2Controlador.preguntaDetonadora}"/>
+                                        </span>
+                                    </div>
                                 </div>
-                                <div style="" class="uk-card-footer">
-                                    <h:form>
-                                        <h:commandLink  action="#{tareaGramaticaControlador.incrementaReporduccion(1, tareaActvidadModelo.id)}" style="display: none">
-                                            <f:actionListener binding="#{actividadAlumno2Controlador.buscaPregunta(tareaActvidadModelo.idActividad)}"/>
-                                            <f:ajax render="pregunta-detonadora"/>
-                                        </h:commandLink>
-                                    </h:form>
-                                    <h:form styleClass="tam-form">
+                                <div style="" class="uk-card-footer uk-text-center">
+                                    <ui:remove>
+                                        <h:form>
+                                            <h:commandLink  action="#{tareaGramaticaControlador.incrementaReporduccion(1, tareaActvidadModelo.id)}" >
+                                                <f:actionListener binding="#{actividadAlumno2Controlador.buscaPregunta(tareaActvidadModelo.idActividad)}"/>
+                                                <f:ajax render="pregunta-detonadora"/>
+                                            </h:commandLink>
+                                        </h:form>
+                                    </ui:remove>
+                                    <h:form styleClass="">
                                         <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="#{boton['homework']}"/>
                                     </h:form>
                                 </div>
@@ -123,71 +149,67 @@
                 </h:panelGroup>
             </div>
         </div>
-        <h:panelGroup id="modal-pregunta-detonadora" layout="block" styleClass="uk-flex-top fondo-pregunta-detonadora" pt:uk-modal="">
-            <div class="uk-modal-dialog pop-art-modal uk-modal-body uk-margin-auto-vertical">
-                <button class="uk-modal-close-default" type="button" uk-close=""/>
-                <h:outputText id="pregunta-detonadora" value="#{actividadAlumno2Controlador.preguntaDetonadora}"/>
-            </div>
-        </h:panelGroup>
-        <script type="application/javascript">
-            var videos = document.querySelectorAll('.videoPlayer');
-            var mensajes = document.querySelectorAll('.uk-card-body');
-            var reproducciones = document.querySelectorAll('.uk-padding-small');
-            var linksTareas = document.querySelectorAll('.uk-card-footer');
-            var i = 0;
-            linksTareas.forEach(function (value) {
-                value.dataset.id = videos[i].getAttribute('id');
-                value.setAttribute('style',  (parseInt(reproducciones[i].innerHTML) !== 0)?'':'display: none;');
-                mensajes[i].setAttribute('style', (parseInt(reproducciones[i].innerHTML) !== 0)?'display: none;':'');
-                i++;
-            });
-            var players = [];
-            var player;
-            function onYouTubeIframeAPIReady() {
-                videos.forEach(function (value) {
-                    player = new YT.Player(value, {
-                        height: '100%',
-                        width: '100%',
-                        videoId: value.getAttribute('id'),
-                        events: {
-                            'onReady': onPlayerReady,
-                            'onStateChange': onPlayerStateChange
-                        }
-                    });
-                    players.push(player);
-                });
-            }
+        <ui:remove>
+            <h:panelGroup id="modal-pregunta-detonadora" layout="block" styleClass="uk-flex-top fondo-pregunta-detonadora" pt:uk-modal="">
+                <div class="uk-modal-dialog pop-art-modal uk-modal-body uk-margin-auto-vertical">
+                    <button class="uk-modal-close-default" type="button" uk-close=""/>
+    <!--                <h:outputText id="pregunta-detonadora" value="#{actividadAlumno2Controlador.preguntaDetonadora}"/>-->
+                </div>
+            </h:panelGroup>
+        </ui:remove>
 
-            function onPlayerReady(event) {
-                console.log('Reproductor listo.')
-            }
-            var done = false;
-            function onPlayerStateChange(event) {
-                if (event.data === YT.PlayerState.ENDED &amp;&amp; !done) {
-                    var urlVideoYT = event.target.getVideoUrl();
-                    var idVideoYT = urlVideoYT.split('v=');
-                    var i = 0;
-                    linksTareas.forEach(function (value) {
-                        if(value.getAttribute('data-id') === idVideoYT[1]){
-                            console.log(value, mensajes[i], idVideoYT[1]);
-                            value.setAttribute('style', '');
-                            mensajes[i].setAttribute('style', 'display: none;');
+        <h:outputScript library="js" name="alumno/activities.js"/>
+        <script type="application/javascript">
+
+            // document.addEventListener('DOMContentLoaded', function (evt) {
+            //     var imgVideos = document.querySelectorAll('.uk-card-media-top');
+            //     imgVideos.forEach(function (imgV,index) {
+            //         var imagen = document.createElement('img');
+            //          var liga='https://i.ytimg.com/vi/';
+            //         var ligaCompleta = liga.concat(imgV.dataset.video,'/mqdefault.jpg');
+            //         imagen.src = ligaCompleta;
+            //         imgV.appendChild(imagen);
+            //
+            //     });
+            //
+            // });
+
+            document.addEventListener("DOMContentLoaded", function(evt) {
+                var lazyloadImages = document.querySelectorAll(".uk-card-media-top img[data-video]");
+                var lazyloadThrottleTimeout;
+                function lazyload () {
+                    if(lazyloadThrottleTimeout) {
+                        clearTimeout(lazyloadThrottleTimeout);
+                    }
+
+                    lazyloadThrottleTimeout = setTimeout(function() {
+                        var scrollTop = window.pageYOffset;
+                        lazyloadImages.forEach(function(img) {
+                            if(img.offsetTop &lt; (window.innerHeight + scrollTop)) {
+                                // while (img.hasChildNodes()){
+                                //     img.removeChild(img.firstChild);
+                                // }
+                                // var imagen = document.createElement('img');
+                                // var liga='https://i.ytimg.com/vi/';
+                                // var ligaCompleta = liga.concat(img.dataset.video,'/mqdefault.jpg');
+                                // imagen.src = ligaCompleta;
+                                // img.appendChild(imagen);
+                                img.src = img.dataset.video;
+                            }
+                        });
+                        if(lazyloadImages.length === 0) {
+                            document.removeEventListener("scroll", lazyload);
+                            window.removeEventListener("resize", lazyload);
+                            window.removeEventListener("orientationChange", lazyload);
                         }
-                        i++;
-                    });
-                    event.target.a.parentElement.nextElementSibling.nextElementSibling.querySelector('form a').click();
-                    var reproducciones = event.target.a.parentElement.previousElementSibling.querySelector('span.uk-padding-small');
-                    reproducciones.textContent = parseInt(reproducciones.textContent) + 1;
-                    UIkit.modal(document.getElementById('modal-pregunta-detonadora')).show();
-                    done = true;
-                }else {
-                    done = false;
+                    }, 20);
                 }
 
-
-            }
+                document.addEventListener("scroll", lazyload);
+                window.addEventListener("resize", lazyload);
+                window.addEventListener("orientationChange", lazyload);
+            });
         </script>
-        <h:outputScript library="js" name="alumno/activities.js"/>
     </ui:define>
 </ui:composition>
 </html>
