--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -89,25 +89,15 @@
                                                 <h:outputText value="#{tareaActvidadModelo.asignacion}">
                                                     <f:convertDateTime locale="en_UK" timeStyle="short" type="date" dateStyle="full"/>
                                                 </h:outputText>
-                                                #{actividadAlumno2Controlador.buscaPregunta(tareaActvidadModelo.idActividad)}
                                             </span>
                                            <ui:remove>#{tareaActvidadModelo.idActividad}</ui:remove>
                                         </div>
-                                        <ui:remove>
-                                            <div class="uk-width-auto uk-text-right uk-text-muted">
-                                                <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>
-                                                <span class="uk-padding-small">#{tareaActvidadModelo.reproducciones}</span>
-                                            </div>
-                                        </ui:remove>
+
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-media-top" data-video="#{tareaActvidadModelo.idActividad}">
                                     <h:panelGroup layout="block" pt:uk-spinner=""/>
-                                    <ui:remove><div id="#{tareaActvidadModelo.idActividad}" class="videoPlayer"></div>
-                                        <iframe id="#{tareaActvidadModelo.idActividad}" type="text/html" width="100%" height="100%"
-                                                src="http://www.youtube.com/embed/#{tareaActvidadModelo.idActividad}?enablejsapi=1"
-                                                frameborder="0"></iframe>
-                                    </ui:remove>
+
                                     <ui:fragment rendered="#{(conta.index) le 6 }">
                                         <img src="https://i.ytimg.com/vi/#{tareaActvidadModelo.idActividad}/mqdefault.jpg"/>
                                     </ui:fragment>
@@ -119,26 +109,12 @@
                                 <div style="" class="uk-card-body">
                                     <ui:remove><div class="uk-text-center mensaje1"><span class="mensaje1-1">#{alumno['activities.title.description.please.watch.the']}<br/>#{alumno['title.description.full.video']}</span></div></ui:remove>
                                     <div class="caja-pregunta-detonadora">
-                                        <h:form>
-                                            <h:commandLink  action="#{tareaGramaticaControlador.incrementaReporduccion(1, tareaActvidadModelo.id)}" >
-                                                <f:actionListener binding="#{actividadAlumno2Controlador.buscaPregunta(tareaActvidadModelo.idActividad)}"/>
-                                                <f:ajax render="pregunta-detonadora"/>
-                                            </h:commandLink>
-                                        </h:form>
                                         <span>
-                                            <h:outputText id="pregunta-detonadora" value="#{actividadAlumno2Controlador.preguntaDetonadora}"/>
+                                            <h:outputText  value="#{tareaActvidadModelo.preguntaDetonadora}"/>
                                         </span>
                                     </div>
                                 </div>
                                 <div style="" class="uk-card-footer uk-text-center">
-                                    <ui:remove>
-                                        <h:form>
-                                            <h:commandLink  action="#{tareaGramaticaControlador.incrementaReporduccion(1, tareaActvidadModelo.id)}" >
-                                                <f:actionListener binding="#{actividadAlumno2Controlador.buscaPregunta(tareaActvidadModelo.idActividad)}"/>
-                                                <f:ajax render="pregunta-detonadora"/>
-                                            </h:commandLink>
-                                        </h:form>
-                                    </ui:remove>
                                     <h:form styleClass="">
                                         <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="#{boton['homework']}"/>
                                     </h:form>
